feat(BA-2067, BA-2076): Integrate Apollo Router to unify GraphQL subgraphs with web-server proxy (#5419)
