# src/ai/backend/manager/api/spec.py
@@ -89,7 +89,7 @@ GRAPHIQL_V2_HTML = """
     ></script>
 
     <script>
-      const fetcher = GraphiQL.createFetcher({ url: '../../admin/gql/v2' });
+      const fetcher = GraphiQL.createFetcher({ url: '../../admin/gql/strawberry' });
 
       ReactDOM.render(
         React.createElement(GraphiQL, { fetcher: fetcher }),
@@ -102,7 +102,7 @@ GRAPHIQL_V2_HTML = """
 
 
 @auth_required
-async def render_graphiql_html(request: web.Request) -> web.Response:
+async def render_graphiql_graphene_html(request: web.Request) -> web.Response:
     root_ctx: RootContext = request.app["_root.context"]
     if not root_ctx.config_provider.config.api.allow_graphql_schema_introspection:
         raise GenericForbidden
@@ -114,7 +114,7 @@ async def render_graphiql_html(request: web.Request) -> web.Response:
     )
 
 
-async def render_graphiql_v2_html(request: web.Request) -> web.Response:
+async def render_graphiql_strawberry_html(request: web.Request) -> web.Response:
     root_ctx: RootContext = request.app["_root.context"]
     if not root_ctx.config_provider.config.api.allow_graphql_schema_introspection:
         raise GenericForbidden
@@ -165,8 +165,8 @@ def create_app(
     app["prefix"] = "spec"
     app.on_startup.append(init)
     cors = aiohttp_cors.setup(app, defaults=default_cors_options)
-    cors.add(app.router.add_route("GET", "/graphiql", render_graphiql_html))
-    cors.add(app.router.add_route("GET", "/graphiql/v2", render_graphiql_v2_html))
+    cors.add(app.router.add_route("GET", "/graphiql", render_graphiql_graphene_html))
+    cors.add(app.router.add_route("GET", "/graphiql/strawberry", render_graphiql_strawberry_html))
     cors.add(app.router.add_route("GET", "/openapi", render_openapi_html))
     cors.add(app.router.add_route("GET", "/openapi/spec.json", generate_openapi_spec))
 
